--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<script src="./lib/phaser.js"></script>
 <title>Celestial Goblaster</title>
 </head>
 <body>
