script.js -- where game goes

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <script src="./lib/phaser.js"></script>
+<script src="script.js"></script>
 <title>Celestial Goblaster</title>
 </head>
 <body>
