--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <!--
     main has to be last vvvvvvvvv
 -->
-<script src="main.js"></script>
+<script src="./src/main.js"></script>
 <title>Celestial Goblaster</title>
 </head>
 <body>
