window is visable

--- a/index.html
+++ b/index.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<script src="./lib/phaser.js"></script>
-
-<!--
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Celestial Goblaster</title>
+  </head>
+  <body>
+    <script src="./lib/phaser.js"></script>
+    <!--
     prefabs/ others loaded here vvvvvvvv
 -->
 
-<!--
+    <!--
     scenes are loaded here vvvvvvvvv
 -->
-<script src="./src/scenes/Play.js"></script>
+    <script src="./src/scenes/Play.js"></script>
 
-
-<!--
+    <!--
     main has to be last vvvvvvvvv
 -->
-<script src="./src/main.js"></script>
-<title>Celestial Goblaster</title>
-</head>
-<body>
+    <script src="./src/main.js"></script>
+  </body>
+</html>
