--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <!--
     scenes are loaded here vvvvvvvvv
 -->
+    <script src="./src/scenes/Title.js"></script>
     <script src="./src/scenes/Play.js"></script>
 
     <!--
