added cat class and temp art for cat

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!--
     prefabs/ others loaded here vvvvvvvv
 -->
-
+    <script src="./src/prefabs/Cat.js"></script>
     <!--
     scenes are loaded here vvvvvvvvv
 -->
