--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       var module = {};
     </script>
     <script src="https://unpkg.com/lodash.clonedeep@4.5.0/index.js"></script>
-    <script src="bundle.js"></script>
+    <script src="docs/bundle.js"></script>
     <script>
       addGameScript();
       window.addEventListener("load", onLoad);
