--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     </script>
     <script src="https://unpkg.com/lodash.clonedeep@4.5.0/index.js"></script>
     <script src="docs/bundle.js"></script>
+    <script src="main.js"></script>
     <script>
-      addGameScript();
       window.addEventListener("load", onLoad);
     </script>
   </head>
