--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="https://unpkg.com/crisp-game-lib@1.1.1/docs/bundle.js"></script>
 
 <script>
-titleWords = ["Cat", "Catch", "Ca$h"];
+titleWords = ["Cat", "Catch", "Ca$h", "Coins", "Currency", "Cards", "Confetti", "Cat'astrophy", "Crazy", "Criminal", "Coniving"];
 word1 = titleWords[rndi(titleWords.length)]
 word2 = titleWords[rndi(titleWords.length)]
 word3 = titleWords[rndi(titleWords.length)]
